# struggle

./: .gitignore  COPYING  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  main.c  system.h
